-------------------------------------------------------------------------------
CorsixTH 0.69.0 - released July 2025
-------------------------------------------------------------------------------
# Features
* Custom level/campaign creators can now use an existing level file as an
  overlay to copy and extend their level file with the #overlay variable. See
  the 'Custom Level' Wiki page for more information.
* A new machine menu has been added. Now you can view the status of all your
  hospital machines in one place!
* Changing speed in game now happens immediately
* Patient happiness can now be a win/lose factor in custom games
* Transparent walls can now be toggled using Shift + X
* Soda price can now be configured in the level file
* Improvements and fixes for the ChirzmanTV custom campaign

# Changes
* You can now hear patients vomiting, instead of just the vomit splatters
* Lakes no longer show in the Town Map as per the original game
* Warns of incompatibility for saves more than 2 releases old
* Improved how staff look for work if idle
* Machine strength reduction after repair now more closely aligned with the
  original game
* Machine strength now has a minimum value of 2 after repair
* Mouse is now only captured when in game, or using the map editor
* Improved measurement on the progress report chart columns
* Annual rewards and trophies now have more robust evaluation criteria
* A patient's treatment cost is now decided at the point they agree to pay
* VIPs now walk slower, as in the original game
* Gamelogs now include the date and time of the crash in their file name, and
  the last 10 logs are now held in the Logs folder
* Finding files for custom campaigns is now more reliable, and supports storing
  your campaign inside its own folder
* Custom Campaigns can no longer be played in Free Build mode, as they could
  break campaign progression
* For games compiled using fluidsynth (such as our Windows and Flatpak builds),