@@ -1,4 +1,10 @@
 -------------------------------------------------------------------------------
+CorsixTH 0.69.1 - released August 2025
+-------------------------------------------------------------------------------
+# Bug Fixes
+* Fixed a crash when placing staff in a room while a patient is being treated.
+
+-------------------------------------------------------------------------------
 CorsixTH 0.69.0 - released July 2025
 -------------------------------------------------------------------------------
 # Features
